Add test driven page

--- a/starter/index.html
+++ b/starter/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="msg">
             <div class="player player1">
-                <div class="mark">&#10799;</div>
+                <div class="mark">&times;</div>
                 <div class="arrow arrow-r"></div>
             </div>
             <div class="player player2">
